--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -54,14 +54,14 @@
     font-size: 1.125rem;
     cursor: pointer;
     margin-top: 6rem;
-    transition: background-color 0.3s;
     height: 3rem;
     width: 12rem;
+    transition: background-color 0.6s font-weight 0.6s; /* Add transition for a smooth effect */
+}
 
-    &:hover {
-        background-color: orange;
-        color: black;
-    }
+.reserve-a-table-button:hover {
+    font-weight: bold;
+    background-color: darkgoldenrod;
 }
 
 .header-right {
@@ -80,7 +80,7 @@
 /*Media query */
 
 /* Media query for screens smaller than 768px */
-@media (max-width: 768px) and (max-width: 1024px) {
+@media (max-width: 1068px) and (max-width: 1024px) {
     .header {
         padding: 0%;
         flex-direction: column;
@@ -99,7 +99,7 @@
 
     .restaurant-title {
         font-size: 4rem;
-        margin: 2.5rem 0 -2rem 0;
+        margin: 2.5rem 0 1rem 0;
     }
     
     .restaurant-subtitle {
@@ -121,12 +121,13 @@
         padding: 1% 2%;
         font-size: 1.125rem;
         cursor: pointer;
-        margin: 1rem 0 2.5rem 0;
+        margin: 1rem 0 5rem 0;
         height: 3rem;
         width: 12rem;
     }
 
     .restaurant-banner {
+        margin-top: 3rem;
         max-width: 100%;
         height: auto;
     }
