--- a/meta-capstone-project/src/styles/NavStyle.css
+++ b/meta-capstone-project/src/styles/NavStyle.css
@@ -80,6 +80,7 @@
     .logo {
         max-width: 100%;
         padding-left: 1rem;
+        padding-top: 0.5rem;
         margin: 0 auto;
     }
 
