--- a/meta-capstone-project/src/styles/SpecialOffersStyle.css
+++ b/meta-capstone-project/src/styles/SpecialOffersStyle.css
@@ -24,20 +24,22 @@
     background-color: #F4CE14;
     border-radius: 5px;
     color:  #333333;
+    text-decoration: none;
     border: none;
-    padding: 1% 2%;
+    padding: 0.2% 0.5%;
     font-size: 1.125rem;
     cursor: pointer;
-    margin-top: 3rem;
-    transition: background-color 0.3s;
-    height: 3rem;
-    width: 12rem;
-
-    &:hover {
-        background-color: orange;
-        color: black;
-    }
+    margin-top: 6rem;
+    height: 2.7rem;
+    width: 11rem;
+    transition: background-color 0.6s font-weight 0.6s; /* Add transition for a smooth effect */
 }
+
+.online-menu-button:hover {
+    font-weight: bold;
+    background-color: darkgoldenrod;
+}
+
 
 /* Cards styling */
 
@@ -123,7 +125,7 @@ transform: scale(1.1);
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 1068px) {
 
     .main-header {
         text-align: center;
@@ -140,8 +142,8 @@ transform: scale(1.1);
         font-size: 1.125rem;
         cursor: pointer;
         margin: 2.5rem 0 2.5rem 0;
-        height: 3rem;
-        width: 12rem;
+        height: 2.7rem;
+        width: 11rem;
     }
     
     /*cards*/
