--- a/meta-capstone-project/src/styles/ConfirmedBookingStyling.css
+++ b/meta-capstone-project/src/styles/ConfirmedBookingStyling.css
@@ -8,21 +8,27 @@
 
 .confirmed-description {
     text-align: center;
-    margin-top: 5.5em;
+    margin-top: 10em;
+    margin-bottom: 10em;
 }
 
 .return-button {
     background-color:#F4CE14;
     font-family: 'Karla', sans-serif;
     color: #495E57;
-    align-content: center;
-    margin: 0 auto;
-    padding: 1em 1.25em 1em 1.25em;
+    display: inline-block;
+    margin-top:5em;
+    margin: 2em auto;
+    padding: 1em 1.25em;
     font-size: 1.125rem;
     border-radius: 6em;
     cursor: pointer;
     box-shadow: 0 0.3em 0.2em rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s, color 0.3s;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .return-button:hover {
