--- a/meta-capstone-project/src/styles/AboutStyles.css
+++ b/meta-capstone-project/src/styles/AboutStyles.css
@@ -86,7 +86,7 @@
     max-width: 100%;
 }
 
-@media (max-width: 768px) and (max-width: 1024px) {
+@media (max-width: 968px) {
    .about-content {
     display: flex;
     flex-direction: column;
@@ -117,7 +117,7 @@
     .mario-adrian-b-container {
         position: static;
         width: 100%;
-        margin: 1rem 0;
+        margin: 2rem 0;
     }
     
     .mario-adrian-a-container {
