--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -115,15 +115,16 @@
         }
 
     .reserve-a-table-button {
-        align-items: 'center';
+     align-items: 'center';
+     background-color: #F4CE14;
         border-radius: 5px;
         border: none;
-        padding: 1% 2%;
+        padding: 2% 4%;
         font-size: 1.125rem;
         cursor: pointer;
-        margin: 1rem 0 5rem 0;
-        height: 3rem;
-        width: 12rem;
+        margin: 2.5rem 0 2.5rem 0;
+        height: 2.7rem;
+        width: 11rem;
     }
 
     .restaurant-banner {
